// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` test in <FirstApp /> should display the name Daniel 1`] = `
<h1
  data-testid="test-name"
>
  Daniel
</h1>
`;

exports[` test in <FirstApp /> should to do match with the snapshot 1`] = `
<div>
  <h1
    data-testid="test-name"
  >
    Daniel
  </h1>
  <p>
    subtitle
  </p>
</div>
`;
